syntax = "proto3";

package grpc_example;

option java_package = "grpc.example";
option java_outer_classname = "MessageProto";

service ExampleService {
    rpc SendMessage(RequestMessage) returns (ResponseMessage) {}
}

message RequestMessage {
    string message = 1;
}

message ResponseMessage {
    string reply = 1;
}
